# BPETokenizer

./: .gitignore  LICENSE  README.md  Tokenization.ipynb  explicación_bpe.ipynb  pyproject.toml  quickstart.ipynb  tests.ipynb
.ipynb_checkpoints/: README-checkpoint.md  tests-checkpoint.ipynb
BPETokenizer/: BPETokenizer.py  BPETrainer.py  BaseBPETokenizer.py  RegexPatterns.py  __init__.py
text/: toy_text.txt
tokenizer/: merges.txt  tokenizer.json  vocab.json
