[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BPETokenizer"
version = "0.1.0"
authors = [
  { name="Erik Sarriegui", email="erik@sarriegui.es" },
]

description = "Una implementación de un tokenizador BPE simple."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
keywords = ["tokenizer", "bpe"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Attribution 4.0 International",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/eriksarriegui/BPETokenizer"
Repository = "https://github.com/eriksarriegui/BPETokenizer"

[tool.setuptools.packages.find]
where = ["."]